fix: security fixes

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ CACHE_TYPE=simple
 MAILGUN_API_KEY=your-mailgun-api-key-here
 MAILGUN_DOMAIN=your-mailgun-domain-here
 MAILGUN_FROM_EMAIL=your-mailgun-from-email-here
+
+PORT=5001
+FLASK_DEBUG=false
